Fix tag filter problem, fix editor height css error, add some image to introduce

--- a/src/less/usage-heat-map.less
+++ b/src/less/usage-heat-map.less
@@ -65,19 +65,19 @@
       }
 
       &.stat-day-L1-bg {
-        background-color: @stat-day-L1-bg !important;
+        background-color: @stat-day-L1-bg;
       }
 
       &.stat-day-L2-bg {
-        background-color: @stat-day-L2-bg !important;
+        background-color: @stat-day-L2-bg;
       }
 
       &.stat-day-L3-bg {
-        background-color: @stat-day-L3-bg !important;
+        background-color: @stat-day-L3-bg;
       }
 
       &.stat-day-L4-bg {
-        background-color: @stat-day-L4-bg !important;
+        background-color: @stat-day-L4-bg;
       }
 
       &.today {
@@ -214,23 +214,23 @@
       }
 
       &.stat-day-L1-bg {
-        background-color: @stat-dark-day-L1-bg !important;
+        background-color: @stat-dark-day-L1-bg;
       }
 
       &.stat-day-L2-bg {
-        background-color: @stat-dark-day-L2-bg !important;
+        background-color: @stat-dark-day-L2-bg;
       }
 
       &.stat-day-L3-bg {
-        background-color: @stat-dark-day-L3-bg !important;
+        background-color: @stat-dark-day-L3-bg;
       }
 
       &.stat-day-L4-bg {
-        background-color: @stat-dark-day-L4-bg !important;
+        background-color: @stat-dark-day-L4-bg;
       }
 
       &.today {
-        border: 1px solid black;
+        border: 1px solid rgb(255, 255, 255);
       }
     }
   }
