--- a/src/less/suggest.less
+++ b/src/less/suggest.less
@@ -3,7 +3,7 @@
 
 .theme-light .rta {
     position: relative;
-    font-size: 18px;
+    font-size: 15px;
     width: 100%;
     height: 100%;
 
@@ -111,7 +111,7 @@
 
 .theme-dark .rta {
     position: relative;
-    font-size: 18px;
+    font-size: 15px;
     width: 100%;
     height: 100%;
 
@@ -178,7 +178,7 @@
 .theme-dark .rta__list {
     margin: 0;
     padding: 0;
-    background: #fff;
+    background: rgb(255, 255, 255);
     border: 1px solid #474747;
     border-radius: 0px;
     // box-shadow: 0 0 10px rgba(27, 31, 35, 0.1);
