--- a/styles.css
+++ b/styles.css
@@ -330,7 +330,7 @@
 }
 .theme-light .rta {
   position: relative;
-  font-size: 18px;
+  font-size: 15px;
   width: 100%;
   height: 100%;
 }
@@ -424,7 +424,7 @@
 }
 .theme-dark .rta {
   position: relative;
-  font-size: 18px;
+  font-size: 15px;
   width: 100%;
   height: 100%;
 }
@@ -479,7 +479,7 @@
 .theme-dark .rta__list {
   margin: 0;
   padding: 0;
-  background: #fff;
+  background: #ffffff;
   border: 1px solid #474747;
   border-radius: 0px;
   list-style: none;
@@ -6817,16 +6817,16 @@ div[data-type="memos_view"] .preference-wrapper > .sections-wrapper > .section-c
   background-color: transparent;
 }
 .theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
-  background-color: #9be9a8 !important;
+  background-color: #9be9a8;
 }
 .theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
-  background-color: #40c463 !important;
+  background-color: #40c463;
 }
 .theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
-  background-color: #30a14e !important;
+  background-color: #30a14e;
 }
 .theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
-  background-color: #216e39 !important;
+  background-color: #216e39;
 }
 .theme-light div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.today {
   border: 1px solid black;
@@ -6948,19 +6948,19 @@ div[data-type="memos_view"] .preference-wrapper > .sections-wrapper > .section-c
   background-color: transparent;
 }
 .theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L1-bg {
-  background-color: #F75205 !important;
+  background-color: #F75205;
 }
 .theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L2-bg {
-  background-color: #E03A07 !important;
+  background-color: #E03A07;
 }
 .theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L3-bg {
-  background-color: #BF2104 !important;
+  background-color: #BF2104;
 }
 .theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.stat-day-L4-bg {
-  background-color: #940B01 !important;
+  background-color: #940B01;
 }
 .theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-heat-map > .stat-container.today {
-  border: 1px solid black;
+  border: 1px solid #ffffff;
 }
 .theme-dark div[data-type="memos_view"] .usage-heat-map-wrapper > .usage-detail-container {
   position: absolute;
