Add date picker and fix tag query

--- a/src/less/global.less
+++ b/src/less/global.less
@@ -57,7 +57,7 @@
 
 .theme-light div[data-type="memos_view"] label,
 .theme-light div[data-type="memos_view"] input,
-.theme-light div[data-type="memos_view"] button,
+.theme-light div[data-type="memos_view"] button:not(.rdp-day_selected),
 .theme-light div[data-type="memos_view"] textarea,
 .theme-light img {
   background-color: transparent;
