--- a/src/less/memo-editor.less
+++ b/src/less/memo-editor.less
@@ -27,6 +27,11 @@
     height: auto;
     background-color: white;
   }
+
+  > .date-picker {
+    position: absolute;
+    z-index: 20;
+  }
 }
 
 @media only screen and (max-width: 875px) {
@@ -62,6 +67,11 @@
     width: 100%;
     height: auto;
     background-color: rgb(56, 56, 56);
+  }
+
+  > .date-picker {
+    position: absolute;
+    z-index: 20;
   }
 }
 
