--- a/src/less/tag-list.less
+++ b/src/less/tag-list.less
@@ -106,6 +106,7 @@
             width: 18px;
             height: 18px;
             opacity: 0.8;
+            
           }
 
           &.shown {
@@ -313,6 +314,7 @@
             height: 18px;
             opacity: 0.8;
             color: @text-dark-black;
+            filter: invert(0.8);
           }
 
           &.shown {
