--- a/src/less/suggest.less
+++ b/src/less/suggest.less
@@ -6,6 +6,7 @@
     font-size: 15px;
     width: 100%;
     height: 100%;
+    z-index: 10;
 
     > ::-webkit-scrollbar{
        width:2px;
@@ -114,6 +115,7 @@
     font-size: 15px;
     width: 100%;
     height: 100%;
+    z-index: 10;
 
     > ::-webkit-scrollbar{
        width:2px;
