--- a/src/less/editor.less
+++ b/src/less/editor.less
@@ -137,12 +137,12 @@
 
     > .common-tools-container {
       .flex(row, flex-start, center);
-
-      > .action-btn-icons {
-        > img {
-          filter: invert(0.5);
-        }
+      
+      > img {
+        filter: invert(0.8);
+        color: yellowgreen;
       }
+     
     }
 
     > .btns-container {
@@ -159,6 +159,10 @@
         border-radius: 6px;
         font-size: 13px;
         line-height: 32px;
+
+        > img {
+          filter: invert(0.8);
+        }
 
         &:hover {
           opacity: 0.8;
