--- a/src/less/mixin.less
+++ b/src/less/mixin.less
@@ -18,6 +18,7 @@
 @bg-black: #2f3437;
 @bg-gray: #e4e4e4;
 @bg-whitegray: #f8f8f8;
+@bg-Searchbar-lightgray: #fcfcfc;
 @bg-lightgray: #eaeaea;
 @bg-blue: #1337a3;
 @bg-yellow: yellow;
@@ -28,6 +29,7 @@
 @bg-dark-gray: #353535;
 @bg-dark-whitegray: #808080;
 @bg-dark-lightgray: #727171;
+@bg-dark-Search-lightgray: #302e2e;
 @bg-dark-blue: #2c395a;
 @bg-dark-yellow: rgb(119, 119, 119);
 @bg-dark-light-blue: #616161;
