--- a/src/less/memo-editor.less
+++ b/src/less/memo-editor.less
@@ -38,6 +38,14 @@
   .theme-light div[data-type="memos_view"] .memo-editor-wrapper {
     width: calc(100% - 24px);
     margin: auto;
+    margin-right: 16px;
+    margin-bottom: 8px;
+  }
+
+  .theme-light img.memo-show-editor-button {
+    position: fixed;
+    z-index: 10;
+    filter: opacity(30%);
   }
 }
 
@@ -75,9 +83,20 @@
   }
 }
 
+
+
 @media only screen and (max-width: 875px) {
   .theme-dark div[data-type="memos_view"] .memo-editor-wrapper {
     width: calc(100% - 24px);
     margin: auto;
+    margin-right: 16px;
+    margin-bottom: 8px;
+  }
+
+  .theme-dark img.memo-show-editor-button {
+    position: fixed;
+    z-index: 10;
+    transition: visibility 0s linear 0.5s, opacity 0.5s linear;
+    filter: invert(0.8) opacity(65%);
   }
 }
