--- a/src/less/search-bar.less
+++ b/src/less/search-bar.less
@@ -5,9 +5,10 @@
 
   > .search-bar-inputer {
     .flex(row, flex-start, center);
-    background-color: @bg-lightgray;
+    background-color: @bg-Searchbar-lightgray;
     width: 100%;
-    padding: 8px 16px;
+    height: 40px;
+    padding: 4px 16px;
     border-radius: 8px;
 
     > .icon-img {
@@ -33,8 +34,8 @@
     display: none;
     position: absolute;
     top: 52px;
-    right: -8px;
-    z-index: 2;
+    right: -7px;
+    z-index: 12;
     padding: 8px;
     width: 320px;
 
@@ -42,7 +43,7 @@
       .flex(column, flex-start, flex-start);
       width: 100%;
       background-color: white;
-      padding: 12px 16px;
+      padding: 8px 16px;
       border-radius: 8px;
       box-shadow: 0 0 8px 0 rgb(0 0 0 / 20%);
 
@@ -106,15 +107,14 @@
 @media only screen and (max-width: 875px) {
   .theme-light {
     div[data-type="memos_view"] .search-bar-container {
-      > .quickly-action-wrapper {
-        right: 4px;
-      }
+      width: 120px;
   
       > .search-bar-inputer {
         .flex(row, flex-start, center);
-        background-color: @bg-lightgray;
-        width: 100%;
-        padding: 8px 16px;
+        background-color: @bg-Searchbar-lightgray;
+        // width: 100%;
+        height: 40px;
+        padding: 4px 16px;
         border-radius: 8px;
         width: 120%;
         margin-left: -35px;
@@ -123,10 +123,13 @@
       > .quickly-action-wrapper {
         display: none;
         position: absolute;
-        top: 32px;
-        right: 4px;
-        z-index: 2;
-        padding: 8px;
+        top: 42px;
+        right: -2px;
+        z-index: 12;
+        padding-right: 20px;
+        padding-left: 8px;
+        padding-top: 8px;
+        padding-bottom: 8px;
         width: 320px;
       }
     }
@@ -138,16 +141,18 @@
 
   > .search-bar-inputer {
     .flex(row, flex-start, center);
-    background-color: @bg-dark-lightgray;
+    background-color: @bg-dark-Search-lightgray;
     width: 100%;
-    padding: 2px 16px;
+    height: 40px;
+    padding: 8px 16px;
     border-radius: 8px;
 
     > .icon-img {
       margin-right: 8px;
       width: 14px;
       height: auto;
-      opacity: 0.6;
+      opacity: 0.8;
+      filter: invert(1);
     }
 
     > .text-input {
@@ -167,8 +172,8 @@
     display: none;
     position: absolute;
     top: 52px;
-    right: -8px;
-    z-index: 2;
+    right: -7px;
+    z-index: 12;
     padding: 8px;
     width: 320px;
 
@@ -176,7 +181,7 @@
       .flex(column, flex-start, flex-start);
       width: 100%;
       background-color: rgb(0, 0, 0);
-      padding: 12px 16px;
+      padding: 8px 16px;
       border-radius: 8px;
       margin-top: -8px;
       // box-shadow: 0 0 8px 0 rgba(255, 255, 255, 0.2);
@@ -242,25 +247,32 @@
 @media only screen and (max-width: 875px) {
   .theme-dark {
     div[data-type="memos_view"] .search-bar-container {
-      > .quickly-action-wrapper {
-        right: 4px;
-      }
+      width: 120px;
   
       > .search-bar-inputer {
         .flex(row, flex-start, center);
-        background-color: @bg-dark-lightgray;
-        width: 100%;
-        padding: 2px 16px;
+        background-color: @bg-dark-Search-lightgray;
+        // width: 100%;
+        height: 40px;
+        padding: 8px 16px;
         border-radius: 8px;
         width: 120%;
         margin-left: -35px;
+
+        > .icon-img {
+          margin-right: 8px;
+          width: 14px;
+          height: auto;
+          opacity: 0.8;
+          filter: invert(1);
+        }
       }
   
       > .quickly-action-wrapper {
         display: none;
         position: absolute;
-        top: 32px;
-        right: 4px;
+        top: 42px;
+        right: -2px;
         z-index: 2;
         padding: 8px;
         width: 320px;
