Add click event for edit

--- a/src/less/home.less
+++ b/src/less/home.less
@@ -37,7 +37,7 @@ div[data-type="memos_view"] #page-wrapper {
     }
   }
 
-  div[data-type="memos_view"] #page-wrapper:not(.editor-show-button) {
+  div[data-type="memos_view"] #page-wrapper {
     .flex(column, flex-start, flex-start);
     width: 100%;
     height: 100%;
