--- a/src/less/global.less
+++ b/src/less/global.less
@@ -62,7 +62,7 @@ div[data-type="memos_view"] .view-content:not(.images-wrapper) img {
 
 .theme-light div[data-type="memos_view"] label,
 .theme-light div[data-type="memos_view"] input,
-.theme-light div[data-type="memos_view"] button:not(.rdp-day_selected),
+.theme-light div[data-type="memos_view"] button:not(.rdp),
 .theme-light div[data-type="memos_view"] textarea,
 .theme-light div[data-type="memos_view"] img {
   background-color: transparent;
