--- a/styles.css
+++ b/styles.css
@@ -7817,7 +7817,7 @@ div[data-type="memos_view"] #page-wrapper > .content-wrapper {
   div[data-type="memos_view"] body.mobile-show-sidebar #page-wrapper > .content-wrapper {
     transform: translateX(320px);
   }
-  div[data-type="memos_view"] #page-wrapper:not(.editor-show-button) {
+  div[data-type="memos_view"] #page-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -7828,7 +7828,7 @@ div[data-type="memos_view"] #page-wrapper > .content-wrapper {
     transform: translateX(0);
     margin-top: -10px;
   }
-  div[data-type="memos_view"] #page-wrapper:not(.editor-show-button) > .content-wrapper {
+  div[data-type="memos_view"] #page-wrapper > .content-wrapper {
     width: 100%;
     height: 100%;
     margin-left: 0;
@@ -7940,7 +7940,7 @@ div[data-type="memos_view"] .view-content:not(.images-wrapper) img {
 }
 .theme-light div[data-type="memos_view"] label,
 .theme-light div[data-type="memos_view"] input,
-.theme-light div[data-type="memos_view"] button:not(.rdp-day_selected),
+.theme-light div[data-type="memos_view"] button:not(.rdp),
 .theme-light div[data-type="memos_view"] textarea,
 .theme-light div[data-type="memos_view"] img {
   background-color: transparent;
