Add focus command AND option to focus by default, Fixed some css bugs

--- a/src/less/daily-memo.less
+++ b/src/less/daily-memo.less
@@ -48,6 +48,9 @@
 
       .tag-span {
         cursor: unset;
+        padding-left: 4px;
+        padding-right: 6px;
+        margin-left: 4px;
 
         &:hover {
           color: @text-blue;
@@ -137,6 +140,9 @@
 
       .tag-span {
         cursor: unset;
+        padding-left: 4px;
+        padding-right: 6px;
+        margin-left: 4px;
 
         &:hover {
           color: @text-dark-blue;
