--- a/src/less/memo-card-dialog.less
+++ b/src/less/memo-card-dialog.less
@@ -79,6 +79,9 @@
             font-size: 14px;
             color: @text-blue;
             background-color: unset;
+            padding-left: 4px;
+            padding-right: 6px;
+            margin-left: 4px;
             cursor: unset;
           }
         }
