--- a/src/less/memo-content.less
+++ b/src/less/memo-content.less
@@ -21,7 +21,9 @@
   .tag-span {
     display: inline-block;
     width: auto;
-    padding: 0 6px;
+    padding-left: 4px;
+    padding-right: 6px;
+    margin-left: 4px;
     line-height: 24px;
     font-size: 13px;
     border: none;
@@ -92,7 +94,9 @@
   .tag-span {
     display: inline-block;
     width: auto;
-    padding: 0 6px;
+    padding-left: 4px;
+    padding-right: 6px;
+    margin-left: 4px;
     line-height: 24px;
     font-size: 13px;
     border: none;
@@ -182,7 +186,9 @@
   .tag-span {
     display: inline-block;
     width: auto;
-    padding: 0 6px;
+    padding-left: 4px;
+    padding-right: 6px;
+    margin-left: 4px;
     line-height: 24px;
     font-size: 13px;
     border: none;
@@ -255,7 +261,9 @@
   .tag-span {
     display: inline-block;
     width: auto;
-    padding: 0 6px;
+    padding-left: 4px;
+    padding-right: 6px;
+    margin-left: 4px;
     line-height: 24px;
     font-size: 13px;
     border: none;
