--- a/src/less/siderbar.less
+++ b/src/less/siderbar.less
@@ -15,6 +15,10 @@
   }
 }
 
+.memos-sidebar-wrapper-display {
+  display: none;
+}
+
 @media only screen and (max-width: 875px) {
   body.mobile-show-sidebar {
     #page-wrapper {
