--- a/src/less/tag-list.less
+++ b/src/less/tag-list.less
@@ -188,7 +188,7 @@
 
 @media only screen and (max-width: 875px) {
   .theme-light {
-    div[data-type="memos_view"] .tags-wrapper {
+    div[data-type="memos_view"] .tags-wrapper, div[data-type="memos_view"] .tags-wrapper-mobile-emulate {
       background-color: white;
   
       > .tags-container {
@@ -200,7 +200,7 @@
       }
     }
   
-    .rename-tag-dialog {
+    .rename-tag-dialog, .rename-tag-dialog-mobile-emulate {
       padding-top: 64px;
     }
   }
@@ -396,7 +396,7 @@
 
 @media only screen and (max-width: 875px) {
   .theme-dark {
-    div[data-type="memos_view"] .tags-wrapper {
+    div[data-type="memos_view"] .tags-wrapper, div[data-type="memos_view"] .tags-wrapper-mobile-emulate {
       background-color: rgb(0, 0, 0);
   
       > .tags-container {
@@ -408,7 +408,7 @@
       }
     }
   
-    .rename-tag-dialog {
+    .rename-tag-dialog, .rename-tag-dialog-mobile-emulate {
       padding-top: 64px;
     }
   }
